update gitignore to ignore video

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 sandbox/*
 a.out
-
+final.mkv
+hasc_exam.pdf
 # Created by https://www.toptal.com/developers/gitignore/api/vim,visualstudiocode,c++,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,visualstudiocode,c++,python
 
